<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    android:padding="8dp">

    <LinearLayout
        android:id="@+id/group_actions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <org.smartregister.view.customcontrols.CustomFontTextView
            android:id="@+id/textview_provide_group_details"
            style="@style/CustomFontTextViewStyle.ListView.Normal.MultipleLines"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/record_btn_selector"
            android:gravity="center_horizontal"
            android:paddingLeft="30dp"
            android:paddingTop="10dp"
            android:paddingRight="30dp"
            android:paddingBottom="10dp"
            android:text="@string/provide_group_details"
            android:textColor="@color/white" />

        <org.smartregister.view.customcontrols.CustomFontTextView
            android:id="@+id/textview_process_service_visit"
            style="@style/CustomFontTextViewStyle.ListView.Normal.MultipleLines"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="90dp"
            android:layout_marginRight="90dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/button_process_visit"
            android:gravity="center_horizontal"
            android:paddingLeft="30dp"
            android:paddingTop="10dp"
            android:paddingRight="30dp"
            android:paddingBottom="10dp"
            android:text="@string/manual_process_visit"
            android:textColor="@color/white"
            android:visibility="gone"
            tools:visibility="visible" />

        <org.smartregister.view.customcontrols.CustomFontTextView
            android:id="@+id/textview_add_member"
            style="@style/CustomFontTextViewStyle.ListView.Normal.MultipleLines"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/record_btn_selector"
            android:gravity="center_horizontal"
            android:paddingLeft="30dp"
            android:paddingTop="10dp"
            android:paddingRight="30dp"
            android:paddingBottom="10dp"
            android:text="@string/add_group_member"
            android:textColor="@color/white" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rlLastVisit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/group_actions"
        android:background="@drawable/list_item_background_selctor"
        android:padding="20dp"
        android:visibility="gone">

        <ImageView
            android:id="@+id/tick_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:src="@drawable/childrow_history" />

        <ImageView
            android:id="@+id/iv_last_visit_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/row_goto" />

        <org.smartregister.view.customcontrols.CustomFontTextView
            android:id="@+id/vViewHistory"
            style="@style/CustomFontTextViewStyle.ListView.Normal.MultipleLines"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/tick_image"
            android:gravity="center_horizontal"
            android:text="@string/view_services_history"
            android:textColor="@android:color/black" />

        <org.smartregister.view.customcontrols.CustomFontTextView
            android:id="@+id/ivViewHistoryArrow"
            style="@style/CustomFontTextViewStyle.ListView.Normal.MultipleLines"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/vViewHistory"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/tick_image"
            android:text="@string/view_services_history"
            android:textColor="@android:color/darker_gray" />
    </RelativeLayout>

    <org.smartregister.view.customcontrols.CustomFontTextView
        android:id="@+id/tv_members_title"
        style="@style/CustomFontTextViewStyle.ListView.Normal.MultipleLines"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/rlLastVisit"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/group_members"
        android:textColor="@android:color/black" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_members"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_members_title"
        android:layout_marginTop="8dp"
        android:paddingBottom="24dp" />

    <ProgressBar
        android:id="@+id/progress_bar"
        style="@style/Base.Widget.AppCompat.ProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="gone" />

</RelativeLayout>

