<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/collapsing_toolbar_appbarlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/light_gray">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/collapsing_toolbar_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/collapsing_toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/aypTheme.AppBarOverlay.Light"
                    app:contentInsetEnd="0dp"
                    app:contentInsetLeft="0dp"
                    app:contentInsetRight="0dp"
                    app:contentInsetStart="0dp"
                    app:contentInsetStartWithNavigation="0dp"
                    app:layout_collapseMode="pin">

                    <org.smartregister.view.customcontrols.CustomFontTextView
                        android:id="@+id/toolbar_title"
                        style="@style/CustomFontTextViewStyle.ClientList"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical|start"
                        android:paddingStart="0dp"
                        android:paddingEnd="0dp"
                        android:text="@string/return_to_ayp_groups"
                        android:textColor="@color/customAppThemeBlue"
                        android:textSize="17sp" />
                </androidx.appcompat.widget.Toolbar>

                <LinearLayout
                    android:id="@+id/profile_name_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:paddingTop="10dp"
                    app:layout_collapseMode="parallax">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/imageview_profile"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_gravity="center_horizontal"
                        android:src="@mipmap/ic_member"
                        app:civ_border_color="@color/transparent"
                        app:civ_border_width="3dp" />

                    <org.smartregister.view.customcontrols.CustomFontTextView
                        android:id="@+id/textview_group_name"
                        style="@style/CustomFontTextViewStyle.ClientList"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="5dp"
                        android:text="Group Name"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/register_member_name_size" />

                    <org.smartregister.view.customcontrols.CustomFontTextView
                        android:id="@+id/textview_group_member_count"
                        style="@style/CustomFontTextViewStyle.ClientList.Light"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="6dp"
                        android:textColor="@android:color/black" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="6dp"
                        android:orientation="horizontal">
                        <org.smartregister.view.customcontrols.CustomFontTextView
                            style="@style/CustomFontTextViewStyle.ClientList"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/group_type_title"
                            android:textColor="@android:color/black" />
                        <org.smartregister.view.customcontrols.CustomFontTextView
                            android:id="@+id/textview_group_type"
                            style="@style/CustomFontTextViewStyle.ClientList.Light"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="6dp"
                            android:textColor="@android:color/black" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:orientation="horizontal">
                        <org.smartregister.view.customcontrols.CustomFontTextView
                            style="@style/CustomFontTextViewStyle.ClientList"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/group_age_band_title"
                            android:textColor="@android:color/black" />
                        <org.smartregister.view.customcontrols.CustomFontTextView
                            android:id="@+id/textview_group_age_band"
                            style="@style/CustomFontTextViewStyle.ClientList.Light"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="6dp"
                            android:textColor="@android:color/black" />
                    </LinearLayout>
                </LinearLayout>

            </com.google.android.material.appbar.CollapsingToolbarLayout>

        </com.google.android.material.appbar.AppBarLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <include layout="@layout/content_ayp_group_profile" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</LinearLayout>
